# Shree-Anna-Marketplace

./: .env.example  .gitignore  README.md  eslint.config.mjs  jest.config.ts  jest.setup.tsx  next.config.ts  package-lock.json  package.json  render.yaml  requirements.txt
backend-python/: .env.example  Makefile  README.md  pyproject.toml  requirements.txt
backend-python/app/: __init__.py  main.py
backend-python/app/api/: __init__.py
backend-python/app/api/v1/: __init__.py  admin.py  auth.py  batches.py  developer.py  fpo.py  kyc.py  listings.py  notifications.py  (+12 more)
backend-python/app/core/: __init__.py  config.py  hashing.py  security.py  utils.py
backend-python/app/db/: __init__.py  crud.py  init_db.py  models.py  session.py
backend-python/app/services/: __init__.py  bhashini.py  ekyc.py  escrow.py  google_speech.py  logistics.py  payments.py  quality_assayer.py  razorpay.py  reverie.py  sms.py  storage.py  supabase_auth.py  weather_cache.py
backend-python/app/tests/: __init__.py  conftest.py  test_auth.py  test_smoke_exhaustive.py  test_trace.py  test_webhook.py
backend-python/docs/: MIGRATION_GUIDE.md  demo.md  requests.md
backend-python/migrations/: 001_initial_schema.sql  002_schema_v2.sql  003_crop_history.sql  004_seed_mock_listings.sql
backend-python/scripts/dev/: ensure_dev_users.py  run_dev.sh  venv_create.sh
backend-python/scripts/ops/: check_db.py  export_openapi.py  migrate_add_farmer_fields.py  migrate_add_processor.py  smoke_test.py  test_apis.py  test_registration.py
backend-python/scripts/seed/: seed_data.py  seed_marketplace.py
(+173 files in other folders)
